*Fixed the single-selection item for Jurisdiction. Created some instance int variables for holding the last items in selecting an item. Commented unnecessary log views. Removed some unnecessary codes. In onBindItemViewHolder() method for Child and GrandChild items: Declared final to some variables. Added the condition for having the correct up and down arrow image to be displayed when the child item has children items. Added the condition for monitoring the check item and process the necessary measure for applying the single-selection item.
In onBindHeaderViewHolder() method for Parent item:
Added the condition for having the correct up and down arrow image to be displayed when the child item has children items.
Added the condition for monitoring the check item and process the necessary measure for applying the single-selection item.